--- a/intex.html
+++ b/intex.html
@@ -3,11 +3,20 @@
 <html>
 <head>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
-  <title>Hello, World!</title>
+  <title>Mi repositorio Web!</title>
 </head>
 <body>
   <h1>
-    Hello, World!
+    Yatana Almazan
   </h1>
+  <ul>
+    <li>
+      <a href="ejercicio.html">Funciones  JavaScript</a>
+    </li>
+    <li>
+    <a href ="ejercicio2.html">segunda tarea</a>
+    </li>
+  </ul>
 </body>
 </html>
+
