--- a/ejercicio.html
+++ b/ejercicio.html
@@ -1,45 +1,78 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Contador de Clics</title>
+  <meta charset="utf-8">
+  <title>Eventos de JavaScript</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin-top: 50px;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 18px;
-      cursor: pointer;
-    }
-    p {
-      font-size: 20px;
-      margin-top: 20px;
-    }
+    body { font-family: Arial, sans-serif; margin: 20px; background: #f5f5f5; }
+    table { width: 100%; border-collapse: collapse; background: white; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+    th { background: #e0e0e0; }
+    pre { background: #272822; color: #f8f8f2; padding: 6px; border-radius: 5px; }
+    button { padding: 6px 10px; }
   </style>
 </head>
 <body>
-
-  <h2>Ejemplo práctico: Contador de clics</h2>
-  <button id="btnContador">Haz clic aquí</button>
-  <p>Has hecho <span id="contador">0</span> clics.</p>
+  <h1>Tabla de eventos de JavaScript</h1>
+  <table>
+    <tr>
+      <th>Evento</th>
+      <th>Descripción</th>
+      <th>Ejemplo</th>
+    </tr>
+    <tr>
+      <td><code>click</code></td>
+      <td>Ocurre al hacer clic en un elemento.</td>
+      <td>
+        <pre><code>boton.addEventListener('click', ()=>{
+  alert('Clic!');
+});</code></pre>
+        <button id="btn">Haz clic</button>
+      </td>
+    </tr>
+    <tr>
+      <td><code>mouseover</code></td>
+      <td>Se activa al pasar el mouse sobre un elemento.</td>
+      <td>
+        <pre><code>caja.addEventListener('mouseover', ()=>{
+  caja.style.background='yellow';
+});</code></pre>
+        <div id="caja" style="border:1px solid #000; width:100px; height:30px; text-align:center;">Pasa el mouse</div>
+      </td>
+    </tr>
+    <tr>
+      <td><code>keydown</code></td>
+      <td>Se activa al presionar una tecla.</td>
+      <td>
+        <pre><code>document.addEventListener('keydown', e=>{
+  console.log(e.key);
+});</code></pre>
+        <p>Presiona una tecla y mira la consola.</p>
+      </td>
+    </tr>
+    <tr>
+      <td><code>submit</code></td>
+      <td>Ocurre al enviar un formulario.</td>
+      <td>
+        <pre><code>form.addEventListener('submit', e=>{
+  e.preventDefault();
+  alert('Formulario enviado');
+});</code></pre>
+        <form id="form">
+          <input type="text" placeholder="Tu nombre">
+          <button>Enviar</button>
+        </form>
+      </td>
+    </tr>
+  </table>
 
   <script>
-    // Ejecutar el código solo cuando la página haya cargado completamente
-    document.addEventListener("DOMContentLoaded", function() {
-      let contador = 0;
-      const boton = document.getElementById("btnContador");
-      const texto = document.getElementById("contador");
-
-      // Agregar un "escuchador" de eventos al botón
-      boton.addEventListener("click", function() {
-        contador++;
-        texto.textContent = contador;
-      });
-    });
+    document.getElementById('btn').addEventListener('click', ()=>alert('Clic!'));
+    const caja = document.getElementById('caja');
+    caja.addEventListener('mouseover', ()=> caja.style.background='yellow');
+    caja.addEventListener('mouseout', ()=> caja.style.background='');
+    const form = document.getElementById('form');
+    form.addEventListener('submit', e=>{ e.preventDefault(); alert('Formulario enviado'); });
   </script>
-
 </body>
 </html>
