--- a/index.html
+++ b/index.html
@@ -1,46 +1,36 @@
 <!DOCTYPE html>
-<html lang="es">
+
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Contador de Clics</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin-top: 50px;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 18px;
-      cursor: pointer;
-    }
-    p {
-      font-size: 20px;
-      margin-top: 20px;
-    }
-  </style>
+  <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
+  <title>Mi repositorio Web!</title>
 </head>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<style>
+
+    body {
+    background-color: #FFB6C1; /* Rosa claro */
+    
+
+}
+</style>
+
+
+</head>
+
 <body>
-
-  <h2>Ejemplo práctico: Contador de clics</h2>
-  <button id="btnContador">Haz clic aquí</button>
-  <p>Has hecho <span id="contador">0</span> clics.</p>
-
-  <script>
-    // Ejecutar el código solo cuando la página haya cargado completamente
-    document.addEventListener("DOMContentLoaded", function() {
-      let contador = 0;
-      const boton = document.getElementById("btnContador");
-      const texto = document.getElementById("contador");
-
-      // Agregar un "escuchador" de eventos al botón
-      boton.addEventListener("click", function() {
-        contador++;
-        texto.textContent = contador;
-      });
-    });
-  </script>
-
+  <h1>
+    Yatana Almazan
+  </h1>
+  <ul>
+    <li>
+      <a href="ejercicio.html">Funciones  JavaScript</a>
+    </li>
+    <li>
+    <a href ="ejercicio2.html">segunda tarea</a>
+    </li>
+  </ul>
 </body>
 </html>
 
