--- a/index.html
+++ b/index.html
@@ -3,34 +3,12 @@
 <html>
 <head>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
-  <title>Mi repositorio Web!</title>
+  <link rel="stylesheet" href="styles/style.css"/>
+  <title>Hello, World!</title>
 </head>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<style>
-
-    body {
-    background-color: #FFB6C1; /* Rosa claro */
-    
-
-}
-</style>
-
-
-</head>
-
 <body>
   <h1>
-    Yatana Almazan
+    Hello, World!
   </h1>
-  <ul>
-    <li>
-      <a href="ejercicio.html">Funciones  JavaScript</a>
-    </li>
-    <li>
-    <a href ="ejercicio2.html">segunda tarea</a>
-    </li>
-  </ul>
 </body>
 </html>
-
