--- a/index.html
+++ b/index.html
@@ -1,14 +1,86 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="es">
 <head>
-  <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
-  <link rel="stylesheet" href="styles/style.css"/>
-  <title>Hello, World!</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Operaciones Aritméticas</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f7fb;
+      color: #0a1a44;
+      text-align: center;
+    }
+
+    h1 {
+      color: #0a1a44;
+      margin-top: 30px;
+      font-size: 22px;
+    }
+
+    .tarjeta {
+      background-color: #fff;
+      margin: 20px auto;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+      width: 85%;
+      max-width: 400px;
+      text-align: left;
+    }
+
+    .tarjeta h2 {
+      text-align: center;
+      color: #0a1a44;
+    }
+
+    p {
+      margin: 6px 0;
+      font-size: 16px;
+    }
+
+    .fin {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .fin a {
+      text-decoration: none;
+      font-weight: bold;
+      color: #0056cc;
+    }
+
+    .fin a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <h1>
-    Hello, World!
-  </h1>
+  <h1>Tarea 2: Creación de un Script JavaScript con Variables y Operadores Básicos</h1>
+  <h2>Alumno: Yatana Elizabeth Almazan</h2>
+
+  
+
+  <div class="tarjeta">
+    <h2>Información Personal</h2>
+    <p><strong>Nombre:</strong>Yatana Elizabeth Almazan </p>
+    <p><strong>Edad:</strong> 18</p>
+    <p><strong>País:</strong> Honduras</p>
+  </div>
+
+  <div class="tarjeta">
+    <h2>Operaciones Aritméticas</h2>
+    <p><strong>Suma:</strong> 11</p>
+    <p><strong>Resta:</strong> 8</p>
+    <p><strong>Multiplicación:</strong> 25</p>
+    <p><strong>División:</strong> 8</p>
+    <p><strong>Módulo:</strong> 0</p>
+  </div>
+
+  <div class="fin">
+    <a href="#">Fin del ejercicio</a>
+  </div>
 </body>
 </html>
