--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </head>
 <body>
   <header class="encabezado">
-    <img src="logo-isemed.html" alt="ISEMED"width="300">
+    <img src="ISEMED-logo.jpg" alt="ISEMED"width="300">
     <h2>Instituto Maria Auxiliadora</h2>
     <p><strong>Asignatura:</strong> Diseño Web</p>
     <p><strong>Alumno:</strong> [Yatana Elizabeth Almazan]</p>
